saw a few layout bugs compared to the design, tweaked some values to try and align the edges of the headers better with each other

--- a/src/styles/mycss/5-modules/celerity-header.scss
+++ b/src/styles/mycss/5-modules/celerity-header.scss
@@ -60,7 +60,7 @@
 
 	.list-group-item {
 		border: 0 none;
-		padding: 0 15px;
+		padding: 0 0 0 15px;
 	}
 }
 
@@ -77,7 +77,7 @@
 }
 
 .celerity-header-profile {
-	margin: 0;
+	margin-right: -20px;
 
 	> li {
 		vertical-align: top;
